--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "declaration": false,
     "declarationMap": false,
     "sourceMap": true,
-    "outDir": "./esm",
+    "outDir": "./dist",
     "rootDir": "./src",
     "removeComments": false,
     "noEmit": false,
@@ -22,7 +22,7 @@
     "noImplicitThis": true,
     "alwaysStrict": true,
     "noUnusedLocals": true,
-    "noUnusedParameters": false,
+    "noUnusedParameters": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "moduleResolution": "node",
@@ -38,5 +38,6 @@
     "stripInternal": true,
     "allowUnusedLabels": false
   },
-  "include": ["./src/**/*.d.ts", "./src/**/*.ts", "./src/**/*.tsx"]
+  "include": ["./src/**/*.d.ts", "./src/**/*.ts", "./src/**/*.tsx"],
+  "exclude": ["node_modules", "esm", "./esm_dist", "./mod.ts"]
 }
